<resources>
    <string name="app_name">MyFitBuddy</string>
    <string name="app_full_name">MyFitnessBuddy</string>

    <string name="panel">Dashboard</string>
    <string name="diary">Diary</string>
    <string name="foods">Foods</string>
    <string name="goal">Goal</string>
    <string name="quantity">Quantity</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="calorie">Calories</string>
    <string name="goal_base">Base Goal</string>
    <string name="remaining">Left</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="birthdate">Birthdate</string>
    <string name="objective">Objective</string>
    <string name="activity">Activity</string>
    <string name="meal">Meal</string>
    <string name="name">Name</string>
    <string name="food_name">Food Name</string>
    <string name="calculated">Calculated</string>
    <string name="customised">Customized</string>

    <!-- Buttons -->
    <string name="bt_submit">Submit</string>
    <string name="bt_details_submit">Update Personal Details</string>
    <string name="bt_editDelete">…</string>

    <!-- Label for button description -->
    <string name="back_arrow">back arrow</string>
    <string name="front_arrow">forward arrow</string>
    <string name="check_submit">check submit</string>

    <!-- Time Labels -->
    <string name="today">Today</string>
    <string name="last_month">Last Month\nAvg.</string>
    <string name="last_week">Last Week\nAvg.</string>

    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="goal_value">2800</string>
    <string name="output_value">0</string>
    <string name="foods_goal">500</string>
    <string name="temp_value">000</string>
    <string name="temp_month">80</string>
    <string name="temp_week">75</string>
    <string name="temp_today">70</string>
    <string name="goal_base_value">00000</string>
    <string name="calorie_goal_value">2200</string>
    <string name="label_kg">kg</string>
    <string name="label_cm">cm</string>

    <string name="quick_add">Quick Add</string>
    <string name="add_food">Add Food</string>
    <string name="title_add_foods">Add Foods</string>
    <string name="add_weight">Update Weight</string>
    <string name="add_details">Update Details</string>
    <string name="edit_food">Edit Food</string>
    <string name="delete_food">Delete Food</string>
    <string name="add_calorie_custom">Update Goal</string>
    <string name="details_form">Insert the Details</string>
    <string name="quantity_form">Insert the Quantity</string>
    <string name="birthidate_form">Enter your birthdate</string>

    <string name="edit_meal">Edit Meal</string>

    <string name="meal_example">Chicken Breast</string>
    <string name="additional_details">Additional Information</string>

    <string name="hint_name_label">Enter the name of what you will eat</string>
    <string name="hint_calorie_qty">Enter the caloric quantity</string>
    <string name="hint_height">Enter your height in</string>
    <string name="hint_weight">Enter your weight in</string>
    <string name="hint_calorie_goal">Enter your caloric goal</string>


    <string name="label_tip">
        "Tip:\nInactive spends most of the day sitting\nVery Active spends most of the day exercising"
    </string>
    <string name="label_detail">Details</string>
    <string name="label_meals">Meals</string>
    <string name="search_foods">Search for some food</string>
    <string name="placeholder_meal_name">Meal Type: Breakfast</string>
    <string name="label_my_food">My Foods</string>
    <string name="label_my_meals">My Meals</string>
    <string name="popup_edit">Edit</string>
    <string name="popup_delete">Delete</string>
    <string name="add_calorie_goal">Add calorie goal</string>
    <string name="set_weight">Set weight</string>
    <string name="home">Home</string>
    <string name="confirm_weight_changes">Confirm weight changes</string>
    <string name="confirm_calorie_goal">Confirm calorie goal</string>
    <string name="card_icon">Card Icon</string>
    <string name="card_add">Card Add Icon</string>
    <string name="card_edit">Card Edit Icon</string>
    <string name="invalid_details">Details not valid!</string>
    <string name="invalid_height_format">Invalid height format!</string>
    <string name="press_to_calendar">Press to calendar</string>
    <string name="invalid_date">Invalid date format!</string>
    <string name="dishes">Dishes</string>
    <string name="card_action">Card action</string>
    <string name="search_icon">Search icon</string>
    <string name="description">Description</string>
    <string name="portion">Portion</string>
    <string name="calories">Calories</string>
    <string name="unit">Unit</string>
    <string name="_100">100</string>
    <string name="g">g</string>
    <string name="_165">165</string>
    <string name="icon">Icon</string>
    <string name="choose_an_icon">Choose an icon</string>
    <string name="apple">Apple</string>
    <string name="steak">Steak</string>
    <string name="cookie">Cookie</string>
    <string name="chicken">Chicken</string>
    <string name="breast">Breast</string>
    <string name="fill_all_fields">You must fill all fields!</string>
    <string name="invalid_portion_format">Invalid portion format!</string>
    <string name="invalid_calorie_format">Invalid calorie format!</string>
    <string name="this_list_seems_to_be_empty">This list seems to be empty…</string>
    <string name="not_found_in_list">There is nothing like that in this list…</string>
    <string name="hot_chicken_wings">Hot Chicken Wings</string>
    <string name="_957">957</string>
    <string name="quick">Quick</string>
    <string name="invalid_weight_format">Invalid weight format!</string>
    <string name="update_your_weight">Update your weight</string>
    <string name="weight_in_kg">Weight in kg</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="weight_updated">Weight updated successfully</string>
    <string name="update_your_calorie_goal">Update your calorie goal</string>
    <string name="calculated_calorie_goal">Calculated calorie goal</string>
    <string name="calorie_goal_updated">Calorie goal updated successfully</string>
    <string name="user_preferences_or_calorie">To perform a calorie goal calculation you must add your details!</string>
    <string name="name_input">Name*:</string>
    <string name="description_input">Description:</string>
    <string name="portion_input">Portion*:</string>
    <string name="unit_input">Unit*:</string>
    <string name="calories_input">Calories*:</string>
    <string name="icon_input">Icon*:</string>
    <string name="birthdate_input">Birthdate*:</string>
    <string name="height_input">Height*:</string>
    <string name="weight_input">Weight*:</string>
    <string name="objective_input">Objective*:</string>
    <string name="activity_input">Activity*:</string>
    <string name="quick_breakfast">Quick Breakfast</string>
    <string name="choose_the_quantity">Choose the quantity</string>
    <string name="food_quantity_in">Food quantity in</string>
    <string name="food_added">Food added successfully!</string>
    <string name="invalid_quantity_format">Invalid quantity format!</string>
    <string name="add_dish">Add Dish</string>
    <string name="salad">Salad</string>
    <string name="cheese_cake">Cheese Cake</string>
    <string name="grilled_chicken">Grilled Chicken</string>
    <string name="with_rice_and_salad">With Rice And Salad</string>
    <string name="dish_s_foods">Dish\'s Foods: </string>
    <string name="delete_dish">Delete Dish</string>
    <string name="add">Add</string>
    <string name="kcal">kcal</string>
    <string name="breakfast_865_kcal">Breakfast: 865 kcal</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="lasagna_1975">Lasagna: 1975 kcal</string>
    <string name="chicken_breast">Chicken Breast</string>
    <string name="grilled">Grilled</string>
    <string name="salmon">Salmon</string>
    <string name="baked">Baked</string>
    <string name="brocollis">Brocollis</string>
    <string name="steamed">Steamed</string>
    <string name="rice">Rice</string>
    <string name="white">White</string>
    <string name="sweet_potato">Sweet Potato</string>
    <string name="breakfast_details">Breakfast Details</string>
    <string name="lunch_details">Lunch Details</string>
    <string name="dinner_details">Dinner Details</string>
    <string name="snack_details">Snack Details</string>
    <string name="food_updated">Food updated successfully!</string>
    <string name="remove">Remove</string>
    <string name="food_removed">Food removed successfully!</string>
    <string name="dish_added_meal">Dish added to meal successfully!</string>
    <string name="dish_duplicated">That dish is in that meal already!</string>
    <string name="delete_quick_addition">Delete Quick Addition</string>
    <string name="dish_deleted">Dish deleted successfully!</string>
    <string name="visit_previous_day">Visit previous day</string>
    <string name="visit_next_day">Visit next day</string>
    <string name="no_more_day">There are not more days to that direction!</string>
    <string name="yesterday">Yesterday</string>

</resources>