<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.foods.AddFoodActivity">

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/topNavigation"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/header_padding"
        android:paddingVertical="@dimen/header_vertical_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/bt_back"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/nav_arrow_margin"
            android:layout_weight="0.2"
            android:backgroundTint="?attr/topNavigation"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/back_arrow"
            app:tint="?attr/textColor"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/add_food"
            android:textSize="@dimen/navigation_title_size" />

        <ImageButton
            android:id="@+id/bt_submit"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="0.2"
            android:layout_marginStart="@dimen/nav_arrow_margin"
            android:backgroundTint="?attr/topNavigation"
            android:contentDescription="@string/check_submit"
            android:src="@drawable/confirm_check"
            app:tint="?attr/textColor"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/body_size"
        android:layout_marginBottom="@dimen/body_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_bar">

        <LinearLayout
            android:id="@+id/name_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/body_spacing"
            android:background="?attr/colorCardBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/header_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/name_input"
                android:textSize="@dimen/body_size" />

            <EditText
                android:id="@+id/birthdate_input"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_gravity="end"
                android:layout_weight="0.7"
                android:gravity="end"
                android:hint="@string/chicken"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:textSize="@dimen/body_size"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/description_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/body_spacing"
            android:layout_marginBottom="@dimen/body_spacing"
            android:background="?attr/colorCardBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/header_padding"
            app:layout_constraintEnd_toEndOf="@id/name_group"
            app:layout_constraintStart_toStartOf="@id/name_group"
            app:layout_constraintTop_toBottomOf="@id/name_group">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/description_input"
                android:textSize="@dimen/body_size" />

            <EditText
                android:id="@+id/description_input"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="0.7"
                android:autofillHints="no"
                android:gravity="end"
                android:hint="@string/breast"
                android:inputType="textCapSentences"
                android:textSize="@dimen/body_size"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/portion_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/body_spacing"
            android:layout_marginBottom="@dimen/body_spacing"
            android:background="?attr/colorCardBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/header_padding"
            app:layout_constraintEnd_toEndOf="@id/description_group"
            app:layout_constraintStart_toStartOf="@id/description_group"
            app:layout_constraintTop_toBottomOf="@id/description_group">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/portion_input"
                android:textSize="@dimen/body_size" />

            <EditText
                android:id="@+id/portion_input"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="0.7"
                android:autofillHints="no"
                android:gravity="end"
                android:hint="@string/_100"
                android:text="@string/_100"
                android:inputType="numberDecimal"
                android:textSize="@dimen/body_size"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/unit_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/body_spacing"
            android:layout_marginBottom="@dimen/body_spacing"
            android:background="?attr/colorCardBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/header_padding"
            app:layout_constraintEnd_toEndOf="@id/portion_group"
            app:layout_constraintStart_toStartOf="@id/portion_group"
            app:layout_constraintTop_toBottomOf="@id/portion_group">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/unit_input"
                android:textSize="@dimen/body_size" />

            <EditText
                android:id="@+id/unit_input"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="0.7"
                android:autofillHints="no"
                android:gravity="end"
                android:hint="@string/g"
                android:text="@string/g"
                android:inputType="text"
                android:textSize="@dimen/body_size"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/calorie_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/body_spacing"
            android:layout_marginBottom="@dimen/body_spacing"
            android:background="?attr/colorCardBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/header_padding"
            app:layout_constraintEnd_toEndOf="@id/unit_group"
            app:layout_constraintStart_toStartOf="@id/unit_group"
            app:layout_constraintTop_toBottomOf="@id/unit_group">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/calories_input"
                android:textSize="@dimen/body_size" />

            <EditText
                android:id="@+id/calorie_input"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="0.7"
                android:autofillHints="no"
                android:gravity="end"
                android:hint="@string/_165"
                android:inputType="numberDecimal"
                android:textSize="@dimen/body_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/icon_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/body_spacing"
            android:layout_marginBottom="@dimen/body_spacing"
            android:background="?attr/colorCardBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/header_padding"
            app:layout_constraintEnd_toEndOf="@id/calorie_group"
            app:layout_constraintStart_toStartOf="@id/calorie_group"
            app:layout_constraintTop_toBottomOf="@id/calorie_group">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/icon_input"
                android:textSize="@dimen/body_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="0.7"
                android:autofillHints="no"
                android:gravity="end|center"
                android:hint="@string/choose_an_icon"
                android:textSize="@dimen/body_size"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_group"
            android:orientation="vertical"
            android:background="?attr/colorCardBackground"
            android:gravity="center"
            android:paddingHorizontal="50dp"
            android:paddingBottom="10dp">
            <RadioGroup
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:checked="true"
                    android:contentDescription="@string/choose_apple_image"/>

                <RadioButton
                    android:id="@+id/radio_button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:contentDescription="@string/choose_steak_image"/>

                <RadioButton
                    android:id="@+id/radio_button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:contentDescription="@string/choose_cookie_image"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/apple"
                    android:layout_weight="1"
                    android:contentDescription="@string/apple"/>

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_weight="1"
                    android:src="@drawable/steak"
                    android:contentDescription="@string/steak"/>
                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/cookie"
                    android:layout_weight="1"
                    android:contentDescription="@string/cookie"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size"
        android:backgroundTint="@color/danger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_body"
        android:textColor="@color/white"
        android:text="@string/delete_food"
        android:textStyle="bold"
        android:layout_margin="@dimen/main_padding"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>