<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorLighterBackground"
    tools:context=".activities.diary.AddToMealActivity">

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/topNavigation"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/header_padding"
        android:paddingVertical="@dimen/header_vertical_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/bt_back"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/nav_arrow_margin"
            android:layout_weight="0.2"
            android:background="?attr/topNavigation"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/back_arrow"
            app:tint="?attr/textColor"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/breakfast_865_kcal"
            android:textSize="@dimen/navigation_title_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/foods_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_bar"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="@dimen/magnifying_glass"
            android:layout_height="@dimen/magnifying_glass"
            android:src="@drawable/magnifying_glass"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/nav_arrow_margin"
            android:layout_marginStart="@dimen/nav_arrow_margin"
            app:tint="?attr/textColor"
            android:contentDescription="@string/search_icon"/>
        <EditText
            android:id="@+id/foods_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon_size"
            android:hint="@string/search_foods"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:padding="@dimen/grouped_spacing"
            android:textSize="@dimen/body_size"
            android:backgroundTint="?colorBackground"
            />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint_gray"
        app:layout_constraintTop_toBottomOf="@id/foods_search_layout"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:backgroundTint="?colorCardBackground">

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/foods"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dishes"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/foods_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/main_padding"
        app:layout_constraintBottom_toTopOf="@id/bt_quick_addition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_selector" />

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/this_list_seems_to_be_empty"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/empty_list_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_selector"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/bt_quick_addition"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_button_selector"
        android:backgroundTint="?attr/colorBackground"
        android:padding="13dp"
        android:text="@string/quick_add"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/light_gray"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>