<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/choose_the_quantity"
            android:textStyle="bold"
            android:textSize="30sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/quantity_input"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/food_quantity_in"
                android:autofillHints=""
                android:layout_weight="8"/>
            <TextView
                android:id="@+id/unit_label"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/g"
                android:layout_weight="2"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
